--- a/pom.xml
+++ b/pom.xml
@@ -99,27 +99,31 @@
             <version>3.0.4.RELEASE</version>
         </dependency>
 
-<!--        Webjars for bootstrap, jquery , jquery-validation-->
-        <!-- https://mvnrepository.com/artifact/org.webjars/bootstrap -->
-        <dependency>
-            <groupId>org.webjars</groupId>
-            <artifactId>bootstrap</artifactId>
-            <version>5.2.0</version>
-        </dependency>
 
-        <!-- https://mvnrepository.com/artifact/org.webjars.bower/jquery -->
-        <dependency>
-            <groupId>org.webjars.bower</groupId>
-            <artifactId>jquery</artifactId>
-            <version>3.6.1</version>
-        </dependency>
 
-        <!-- https://mvnrepository.com/artifact/org.webjars.bower/jquery-validation -->
-        <dependency>
-            <groupId>org.webjars.bower</groupId>
-            <artifactId>jquery-validation</artifactId>
-            <version>1.19.3</version>
-        </dependency>
+<!--        -->
+<!--        -->
+<!--&lt;!&ndash;        Webjars for bootstrap, jquery , jquery-validation&ndash;&gt;-->
+<!--        &lt;!&ndash; https://mvnrepository.com/artifact/org.webjars/bootstrap &ndash;&gt;-->
+<!--        <dependency>-->
+<!--            <groupId>org.webjars</groupId>-->
+<!--            <artifactId>bootstrap</artifactId>-->
+<!--            <version>5.2.0</version>-->
+<!--        </dependency>-->
+
+<!--        &lt;!&ndash; https://mvnrepository.com/artifact/org.webjars.bower/jquery &ndash;&gt;-->
+<!--        <dependency>-->
+<!--            <groupId>org.webjars.bower</groupId>-->
+<!--            <artifactId>jquery</artifactId>-->
+<!--            <version>3.6.1</version>-->
+<!--        </dependency>-->
+
+<!--        &lt;!&ndash; https://mvnrepository.com/artifact/org.webjars.bower/jquery-validation &ndash;&gt;-->
+<!--        <dependency>-->
+<!--            <groupId>org.webjars.bower</groupId>-->
+<!--            <artifactId>jquery-validation</artifactId>-->
+<!--            <version>1.19.3</version>-->
+<!--        </dependency>-->
 
 
 
