--- a/pom.xml
+++ b/pom.xml
@@ -99,9 +99,15 @@
             <version>3.0.4.RELEASE</version>
         </dependency>
 
+        <!-- https://mvnrepository.com/artifact/com.auth0/java-jwt -->
+        <dependency>
+            <groupId>com.auth0</groupId>
+            <artifactId>java-jwt</artifactId>
+            <version>4.2.1</version>
+        </dependency>
 
 
-<!--        -->
+        <!--        -->
 <!--        -->
 <!--&lt;!&ndash;        Webjars for bootstrap, jquery , jquery-validation&ndash;&gt;-->
 <!--        &lt;!&ndash; https://mvnrepository.com/artifact/org.webjars/bootstrap &ndash;&gt;-->
