--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -1,6 +1,13 @@
 server:
-  port: 8080
-  hostname: http://localhost:8080
+  port: 80
+  hostname: http://localhost:80
+#  ssl:
+#    enabled: true
+#    key-alias: local_ssl
+#    key-store: classpath:local-ssl.p12
+#    key-store-type: PKCS12
+#    key-password: 1234567
+#    key-store-password: 1234567
 
 spring:
   # (Data Source)
