--- a/src/main/resources/application-dev.yaml
+++ b/src/main/resources/application-dev.yaml
@@ -10,26 +10,33 @@ server:
 #    key-store-password: 1234567
 
 spring:
+
   # (Data Source)
   datasource:
     driver-class-name: org.postgresql.Driver
     url: jdbc:postgresql://localhost:5432/SpringForumApp_DB
     username: postgres
     password: 12345
+
   # Hibernate
   jpa:
     properties:
       hibernate:
         dialect: org.hibernate.dialect.PostgreSQLDialect
         show-sql: true
-    generate-ddl: true
     hibernate:
-      ddl-auto: update
+      ddl-auto: none
+
+  #liquibase
+  liquibase:
+    enabled: true
+
   #HTTP  PUT, PATCH, DELETE
   mvc:
     hiddenmethod:
       filter:
         enabled: true
+
   #mail
   mail:
     host: smtp.yandex.ru
@@ -37,6 +44,7 @@ spring:
     password: c9n2kqlzn1h8q
     port: 465
     protocol: smtps
+
   #auth by google
   security:
     oauth2:
@@ -48,7 +56,6 @@ spring:
             scope:
               - email
               - profile
-
 
 jwt:
   secret: wqeqwzcdasdasdcazcdas
