--- a/src/main/resources/application-test.yaml
+++ b/src/main/resources/application-test.yaml
@@ -1,27 +1,42 @@
 server:
   port: 80
+  hostname: http://localhost:80
+#  ssl:
+#    enabled: true
+#    key-alias: local_ssl
+#    key-store: classpath:local-ssl.p12
+#    key-store-type: PKCS12
+#    key-password: 1234567
+#    key-store-password: 1234567
 
 spring:
+
   # (Data Source)
   datasource:
     driver-class-name: org.postgresql.Driver
     url: jdbc:postgresql://localhost:5432/SpringForumApp_DB
     username: postgres
     password: 12345
+
   # Hibernate
   jpa:
     properties:
       hibernate:
         dialect: org.hibernate.dialect.PostgreSQLDialect
         show-sql: true
-    generate-ddl: true
     hibernate:
-      ddl-auto: update
+      ddl-auto: none
+
+  #liquibase
+  liquibase:
+    enabled: true
+
   #HTTP  PUT, PATCH, DELETE
   mvc:
     hiddenmethod:
       filter:
         enabled: true
+
   #mail
   mail:
     host: smtp.yandex.ru
@@ -29,6 +44,18 @@ spring:
     password: c9n2kqlzn1h8q
     port: 465
     protocol: smtps
+
+  #auth by google
+  security:
+    oauth2:
+      client:
+        registration:
+          google:
+            client-id: 345713087834-ooehioika8efcon2esfj3896pspu2j7h.apps.googleusercontent.com
+            client-secret: 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
+            scope:
+              - email
+              - profile
 
 jwt:
   secret: wqeqwzcdasdasdcazcdas
