--- a/src/main/resources/db/changelog/changeset/create-boards-table.yaml
+++ b/src/main/resources/db/changelog/changeset/create-boards-table.yaml
@@ -1,7 +1,7 @@
 databaseChangeLog:
   - changeSet:
-      id: create-boards-table
-      author: DeveloperName2
+      id: create-boards
+      author: tofffee
       changes:
         - createTable:
             tableName: boards
