--- a/src/main/resources/db/changelog/db.changelog-master.yaml
+++ b/src/main/resources/db/changelog/db.changelog-master.yaml
@@ -1,5 +1,9 @@
 databaseChangeLog:
   - include:
-      file: db/changelog/changeset/create-user-table.yaml
+      file: db/changelog/changeset/create-users-table.yaml
   - include:
-      file: db/changelog/changeset/create-board-table.yaml
+      file: db/changelog/changeset/create-boards-table.yaml
+  - include:
+      file: db/changelog/changeset/create-publications-table.yaml
+  - include:
+      file: db/changelog/changeset/create-comments-table.yaml
