--- a/src/main/resources/db/changelog/changeset/create-users-table.yaml
+++ b/src/main/resources/db/changelog/changeset/create-users-table.yaml
@@ -34,10 +34,15 @@ databaseChangeLog:
                   constraints:
                     nullable: false
               - column:
-                  name: activation_code
+                  name: role
                   type: varchar(250)
                   constraints:
                     nullable: false
+              - column:
+                  name: activation_code
+                  type: varchar(250)
+                  constraints:
+                    nullable: true
               - column:
                   name: enabled
                   type: boolean
