--- a/src/main/resources/db/changelog/db.changelog-master.yaml
+++ b/src/main/resources/db/changelog/db.changelog-master.yaml
@@ -7,3 +7,7 @@ databaseChangeLog:
       file: db/changelog/changeset/create-publications-table.yaml
   - include:
       file: db/changelog/changeset/create-comments-table.yaml
+  - include:
+      file: db/changelog/changeset/create-roles-table.yaml
+  - include:
+      file: db/changelog/changeset/insert-roles.yaml
