--- a/src/main/resources/db/changelog/db.changelog-master.yaml
+++ b/src/main/resources/db/changelog/db.changelog-master.yaml
@@ -10,4 +10,6 @@ databaseChangeLog:
   - include:
       file: db/changelog/changeset/create-roles-table.yaml
   - include:
+      file: db/changelog/changeset/create-users_roles-table.yaml
+  - include:
       file: db/changelog/changeset/insert-roles.yaml
