--- a/src/main/resources/db/changelog/changeset/insert-boards.yaml
+++ b/src/main/resources/db/changelog/changeset/insert-boards.yaml
@@ -1,23 +1,32 @@
 databaseChangeLog:
   - changeSet:
-      id: insert-roles-fields
+      id: insert-boards-fields
       author: tofffee
       changes:
         - insert:
-            tableName: roles
+            tableName: boards
             columns:
               - column:
                   name: id
                   value: "1"
               - column:
                   name: name
-                  value: "ROLE_USER"
+                  value: "Sport"
         - insert:
-            tableName: roles
+            tableName: boards
             columns:
               - column:
                   name: id
                   value: "2"
               - column:
                   name: name
-                  value: "ROLE_ADMIN"
+                  value: "Games"
+        - insert:
+            tableName: boards
+            columns:
+              - column:
+                  name: id
+                  value: "3"
+              - column:
+                  name: name
+                  value: "Music"
