--- a/src/main/resources/db/changelog/changeset/create-users-table.yaml
+++ b/src/main/resources/db/changelog/changeset/create-users-table.yaml
@@ -1,6 +1,6 @@
 databaseChangeLog:
   - changeSet:
-      id: create-user
+      id: create-users
       author: tofffee
       changes:
         - createTable:
