--- a/src/main/resources/db/changelog/db.changelog-master.yaml
+++ b/src/main/resources/db/changelog/db.changelog-master.yaml
@@ -12,4 +12,15 @@ databaseChangeLog:
   - include:
       file: db/changelog/changeset/create-users_roles-table.yaml
   - include:
+      file: db/changelog/changeset/create-images-table.yaml
+  - include:
+      file: db/changelog/changeset/create-files-table.yaml
+  - include:
       file: db/changelog/changeset/insert-roles.yaml
+  - include:
+      file: db/changelog/changeset/insert-boards.yaml
+
+
+
+  - include:
+      file: db/changelog/dummyData/insert-dummy-users.yaml
