--- a/src/main/resources/db/changelog/changeset/create-images-table.yaml
+++ b/src/main/resources/db/changelog/changeset/create-images-table.yaml
@@ -19,6 +19,11 @@ databaseChangeLog:
                   constraints:
                     nullable: false
               - column:
+                  name: name
+                  type: varchar(250)
+                  constraints:
+                    nullable: false
+              - column:
                   name: publication_id
                   type: bigint
                   constraints:
