--- a/src/main/resources/db/changelog/db.changelog-master.yaml
+++ b/src/main/resources/db/changelog/db.changelog-master.yaml
@@ -22,5 +22,5 @@ databaseChangeLog:
 
 
 
-#  - include:
-#      file: db/changelog/dummyData/insert-dummy-users.yaml
+  - include:
+      file: db/changelog/dummyData/insert-dummy-users.yaml
