--- a/src/main/resources/application-test.yaml
+++ b/src/main/resources/application-test.yaml
@@ -31,6 +31,12 @@ spring:
   liquibase:
     enabled: true
 
+  #max uploading file size
+  servlet:
+    multipart:
+      max-file-size: 20MB
+      max-request-size: 20MB
+
   #mail
   mail:
     host: smtp.yandex.ru
@@ -50,6 +56,8 @@ spring:
             scope:
               - email
               - profile
+
+
 
 jwt:
   secret: wqeqwzcdasdasdcazcdas
