--- a/src/main/resources/db/changelog/changeset/create-upfiles-table.yaml
+++ b/src/main/resources/db/changelog/changeset/create-upfiles-table.yaml
@@ -1,10 +1,10 @@
 databaseChangeLog:
   - changeSet:
-      id: create-images
+      id: create-upfiles
       author: tofffee
       changes:
         - createTable:
-            tableName: images
+            tableName: upfiles
             columns:
               - column:
                   name: id
@@ -20,6 +20,11 @@ databaseChangeLog:
                     nullable: false
               - column:
                   name: name
+                  type: varchar(250)
+                  constraints:
+                    nullable: false
+              - column:
+                  name: type
                   type: varchar(250)
                   constraints:
                     nullable: false
