--- a/src/main/resources/db/changelog/changeset/create-upfiles-table.yaml
+++ b/src/main/resources/db/changelog/changeset/create-upfiles-table.yaml
@@ -24,6 +24,9 @@ databaseChangeLog:
                   constraints:
                     nullable: false
               - column:
+                  name: date_of_creation
+                  type: date
+              - column:
                   name: type
                   type: varchar(250)
                   constraints:
