--- a/src/main/resources/application-dev.yaml
+++ b/src/main/resources/application-dev.yaml
@@ -1,6 +1,5 @@
 server:
   port: 80
-  hostname: http://localhost:80
 #  ssl:
 #    enabled: true
 #    key-alias: local_ssl
@@ -58,6 +57,11 @@ spring:
               - profile
 
 
+#custom fields
+forum:
+  email_address: "springforumapp@yandex.ru"
+  scheme: "http://"
+  hostname: "localhost:"
 
 jwt:
   secret: wqeqwzcdasdasdcazcdas
