--- a/src/main/resources/db/changelog/changeset/create/create-publications_upfiles-table.yaml
+++ b/src/main/resources/db/changelog/changeset/create/create-publications_upfiles-table.yaml
@@ -18,3 +18,7 @@ databaseChangeLog:
                   constraints:
                     foreignKeyName: fk_upfile_id
                     references: upfiles(id)
+        - addPrimaryKey:
+            columnNames: publication_id, upfile_id
+            constraintName: pk_publications_upfiles
+            tableName: publications_upfiles
