--- a/src/main/resources/db/changelog/db.changelog-master.yaml
+++ b/src/main/resources/db/changelog/db.changelog-master.yaml
@@ -1,28 +1,31 @@
 databaseChangeLog:
   - include:
-      file: db/changelog/changeset/create-users-table.yaml
+      file: db/changelog/changeset/create/create-users-table.yaml
   - include:
-      file: db/changelog/changeset/create-boards-table.yaml
+      file: db/changelog/changeset/create/create-boards-table.yaml
   - include:
-      file: db/changelog/changeset/create-publications-table.yaml
+      file: db/changelog/changeset/create/create-publications-table.yaml
   - include:
-      file: db/changelog/changeset/create-comments-table.yaml
+      file: db/changelog/changeset/create/create-comments-table.yaml
   - include:
-      file: db/changelog/changeset/create-roles-table.yaml
+      file: db/changelog/changeset/create/create-roles-table.yaml
   - include:
-      file: db/changelog/changeset/create-users_roles-table.yaml
+      file: db/changelog/changeset/create/create-users_roles-table.yaml
   - include:
-      file: db/changelog/changeset/create-upfiles-table.yaml
+      file: db/changelog/changeset/create/create-upfiles-table.yaml
   - include:
-      file: db/changelog/changeset/create-publications_upfiles-table.yaml
+      file: db/changelog/changeset/create/create-publications_upfiles-table.yaml
   - include:
-      file: db/changelog/changeset/insert-roles.yaml
+      file: db/changelog/changeset/create/create-emails-table.yaml
   - include:
-      file: db/changelog/changeset/insert-boards.yaml
+      file: db/changelog/changeset/insert/insert-roles.yaml
+  - include:
+      file: db/changelog/changeset/insert/insert-boards.yaml
 
 
 
+  #dummy data
   - include:
-      file: db/changelog/dummyData/insert-dummy-users.yaml
+      file: db/changelog/changeset/insert/dummyData/insert-dummy-users.yaml
   - include:
-      file: db/changelog/dummyData/insert-dummy-publications.yaml
+      file: db/changelog/changeset/insert/dummyData/insert-dummy-publications.yaml
