--- a/src/main/resources/db/changelog/v-1.0/7-create-comments-table.yaml
+++ b/src/main/resources/db/changelog/v-1.0/7-create-comments-table.yaml
@@ -1,10 +1,10 @@
 databaseChangeLog:
   - changeSet:
-      id: create-emails
+      id: 7
       author: tofffee
       changes:
         - createTable:
-            tableName: email_messages
+            tableName: comments
             columns:
               - column:
                   name: id
@@ -14,18 +14,28 @@ databaseChangeLog:
                     primaryKey: true
                     nullable: false
               - column:
-                  name: subject
-                  type: varchar(250)
+                  name: text
+                  type: varchar(255)
                   constraints:
                     nullable: false
               - column:
-                  name: text
-                  type: varchar(250)
+                  name: created_at
+                  type: date
+              - column:
+                  name: publication_id
+                  type: bigint
                   constraints:
-                    nullable: false
+                    foreignKeyName: fk_publication_id
+                    references: publications(id)
               - column:
                   name: user_id
                   type: bigint
                   constraints:
                     foreignKeyName: fk_user_id
                     references: users(id)
+              - column:
+                  name: parent_comment_id
+                  type: bigint
+                  constraints:
+                    foreignKeyName: fk_parent_comment_id
+                    references: comments(id)
