--- a/src/main/resources/db/changelog/v-1.0/4-create-emails-table.yaml
+++ b/src/main/resources/db/changelog/v-1.0/4-create-emails-table.yaml
@@ -1,10 +1,10 @@
 databaseChangeLog:
   - changeSet:
-      id: create-publications
+      id: 4
       author: tofffee
       changes:
         - createTable:
-            tableName: publications
+            tableName: email_messages
             columns:
               - column:
                   name: id
@@ -14,27 +14,18 @@ databaseChangeLog:
                     primaryKey: true
                     nullable: false
               - column:
-                  name: name
-                  type: varchar(250)
+                  name: subject
+                  type: varchar(255)
                   constraints:
                     nullable: false
               - column:
                   name: text
-                  type: varchar(250)
+                  type: varchar(255)
                   constraints:
                     nullable: false
-              - column:
-                  name: date_of_creation
-                  type: date
               - column:
                   name: user_id
                   type: bigint
                   constraints:
-                    foreignKeyName: fk_publication_author
+                    foreignKeyName: fk_user_id
                     references: users(id)
-              - column:
-                  name: board_id
-                  type: bigint
-                  constraints:
-                    foreignKeyName: fk_board_id
-                    references: boards(id)
